# australian-kpis

./: .dockerignore  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Spec.md  biome.json  codecov.yml  deny.toml  insta.yaml  lefthook.yml  openapi.json  package.json  pnpm-lock.yaml  renovate.json  tsconfig.base.json  turbo.json
.cargo/: config.toml
.config/: insta.yaml  nextest.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  work-item.md
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/codex/: output-schema.json  review_prompt.md
.github/codex/guides/: adapters.md  api-sdk.md  ci-spec.md  db.md  domain.md  frontend.md  ingestion.md
.github/workflows/: pr.yml  test-infra.yml
.sqlx/: query-01bff82dba76e8d4df82a97f6f11d5b47a36566fe13b16161cd38ecf44fd8b39.json  query-0e57ad460aa9b2cc97a33a183dc3e7ccf45afce23d4c82cb9ab54f83bb1b970e.json  query-30faaf5929ed67974e47bd964b703d2bffe36a4b02e4c889ddf8a5acff85b470.json  query-3300a1f7b8bda705478bf54c4a3eca18f96ace7eeea8ed07d89d7b6f74f098f2.json  query-5d1764174068a9f6d836a9663996e9d5520d1a93dc834f78cb00bf5a9ac56825.json  query-b1fab8f460bbdec1f999350a933d7663746e4100eb785a73231545898435d409.json  query-bb89a76683a0b8e0a2942ff9b54012db924868e53b0fa0e207e3ab4ee7070f6b.json  query-c56ca275881bf9115270267a623a79e938f1c22a3409d795cc1e676c16004b14.json  query-c69da0e6dc9ed85c83edad120bd87d282d6affabd53021ccedbf1c11da1dde9a.json  query-ca2c8e65d3af64b6244ea3550c2ba6c433f27abad0598801ce9c98f8b3de9295.json  query-d2ebdfcb2af7fa858c3fb820abfb8d6a3aaabe6ca9c973f315c3dca6e54479d5.json  query-d7d5474cbfe5332298e407e1d7960a7b7c56e2b9b8399c10d260da90bd1ff772.json  query-de8c0bf5a29e15ab6a16cf217f6568bcc6bb7654cc93005bde605f8873c42967.json  query-e8f890bc5c5f636e469eda26984cb3bc79a56d2bb5362d3aca600d6cacd14e73.json  query-e99106e21832d9e58e2d64d9c434f60b0e96cbd1e5345be27741cbb3fa97e958.json  query-eb4aa5e900bcde4a6736ecb2ff48d7f77d38b50289185ebe1d4693acdafd5d0c.json
apps/bench/: README.md  smoke.js
benches/baselines/: README.md  abs-fetch-dhat.md
crates/adapters/abs/: Cargo.toml
crates/adapters/abs/src/: lib.rs
crates/adapters/abs/tests/: discover.rs  fetch.rs  fetch_memory.rs  parse.rs  parse_memory.rs
crates/adapters/abs/tests/fixtures/: cpi_sdmx.json
crates/adapters/abs/tests/snapshots/: discover__parse_dataflow_listing_snapshot.snap  parse__parse_streams_cpi_sdmx_observations_from_artifact.snap
crates/adapters/aemo/: Cargo.toml
crates/adapters/aemo/src/: lib.rs
crates/adapters/apra/: Cargo.toml
crates/adapters/apra/src/: lib.rs
crates/adapters/asx/: Cargo.toml
crates/adapters/asx/src/: lib.rs
crates/adapters/rba/: Cargo.toml
crates/adapters/rba/src/: lib.rs
crates/adapters/state-budgets/: Cargo.toml
crates/adapters/treasury/: Cargo.toml
crates/adapters/treasury/src/: lib.rs
crates/au-kpis-adapter/: Cargo.toml
crates/au-kpis-adapter/src/: lib.rs
crates/au-kpis-adapter/tests/: registry_dispatch.rs
crates/au-kpis-api-http/: Cargo.toml
crates/au-kpis-api-http/examples/: contract_server.rs
crates/au-kpis-api-http/src/: docs.rs  error.rs  lib.rs  routes.rs  state.rs
crates/au-kpis-api-http/tests/: graceful_shutdown.rs  routes.rs
crates/au-kpis-auth/: Cargo.toml
crates/au-kpis-auth/src/: lib.rs
crates/au-kpis-cache/: Cargo.toml
crates/au-kpis-cache/src/: lib.rs
crates/au-kpis-cache/tests/: redis.rs
crates/au-kpis-config/: Cargo.toml
crates/au-kpis-config/src/: lib.rs
crates/au-kpis-db/: Cargo.toml
crates/au-kpis-db/src/: lib.rs
crates/au-kpis-db/tests/: artifacts.rs  migrations.rs
crates/au-kpis-domain/: Cargo.toml
crates/au-kpis-domain/benches/: observation_json.rs
crates/au-kpis-domain/src/: artifact.rs  codelist.rs  dataflow.rs  dimension.rs  ids.rs  lib.rs  measure.rs  observation.rs  series.rs  source.rs
crates/au-kpis-domain/tests/: observation_snapshot.rs  property_roundtrip.rs
crates/au-kpis-domain/tests/snapshots/: observation_snapshot__observation_contract.snap
crates/au-kpis-error/: Cargo.toml
crates/au-kpis-error/src/: lib.rs
crates/au-kpis-ingestion-core/: Cargo.toml
crates/au-kpis-ingestion-core/src/: lib.rs
crates/au-kpis-ingestion-core/tests/: fetch_artifact.rs  pipeline.rs  pipeline_failures.rs
crates/au-kpis-loader/: Cargo.toml
crates/au-kpis-loader/src/: lib.rs
crates/au-kpis-loader/tests/: load_batch.rs
crates/au-kpis-openapi/: Cargo.toml
crates/au-kpis-openapi/src/: lib.rs  main.rs
crates/au-kpis-openapi/tests/: emitter.rs
crates/au-kpis-openapi/tests/fixtures/: openapi-3.1-schema.json
crates/au-kpis-openapi/tests/snapshots/: emitter__openapi.snap
crates/au-kpis-pdf-client/: Cargo.toml
crates/au-kpis-pdf-client/src/: lib.rs
crates/au-kpis-pdf-client/tests/: client.rs
crates/au-kpis-queue/: Cargo.toml
crates/au-kpis-queue/src/: lib.rs
crates/au-kpis-queue/tests/: postgres.rs
crates/au-kpis-schema/: Cargo.toml
crates/au-kpis-schema/src/: lib.rs
crates/au-kpis-storage/: Cargo.toml
crates/au-kpis-storage/src/: lib.rs
crates/au-kpis-storage/tests/: minio.rs
crates/au-kpis-telemetry/: Cargo.toml
crates/au-kpis-telemetry/src/: lib.rs
crates/au-kpis-telemetry/tests/: otlp_export.rs
crates/bins/au-kpis-api/: Cargo.toml
crates/bins/au-kpis-api/src/: main.rs
crates/bins/au-kpis-api/tests/: sigterm.rs
crates/bins/au-kpis-cli/: Cargo.toml
crates/bins/au-kpis-ingestion/: Cargo.toml
crates/bins/au-kpis-scheduler/: Cargo.toml
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/testing/tests/: bench_scaffold.rs
docs/: ci.md  testing.md
infra/compose/: docker-compose.yml  pdf-extractor-stub.py
infra/docker/: au-kpis-api.Dockerfile
infra/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_queue.down.sql  0002_queue.up.sql  0003_artifact_response_headers.down.sql  0003_artifact_response_headers.up.sql
infra/r2/: README.md  lifecycle.json
tests/contract/: schemathesis.toml
tools/openapi-gen/: README.md  generate.mjs
(+4 files in other folders)
