[package]
name = "au-kpis-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "figment-based config loader."

[dependencies]
au-kpis-error = { workspace = true }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }
