[package]
name = "au-kpis-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure domain types for australian-kpis (no async/tokio)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
utoipa = { version = "5", features = ["chrono"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
criterion.workspace = true
proptest = "1"

[[bench]]
name = "observation_json"
harness = false
