[package]
name = "au-kpis-ingestion-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ingestion orchestration (discover -> fetch -> parse -> load)."

[dependencies]
async-trait = "0.1"
au-kpis-adapter = { workspace = true }
au-kpis-db = { workspace = true }
au-kpis-domain = { workspace = true }
au-kpis-error = { workspace = true }
au-kpis-loader = { workspace = true }
au-kpis-storage = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
futures = "0.3"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
au-kpis-adapter-abs = { path = "../adapters/abs" }
au-kpis-config = { workspace = true }
au-kpis-testing = { workspace = true }
object_store = "0.11"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
