[package]
name = "au-kpis-loader"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Observation upsert, revision tracking."

[dependencies]
au-kpis-domain.workspace = true
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "json",
] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
au-kpis-config.workspace = true
au-kpis-db.workspace = true
au-kpis-testing.workspace = true
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
