[package]
name = "au-kpis-openapi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI spec emitter."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
assert_cmd = "2"
jsonschema = "0.29"
