[package]
name = "au-kpis-openapi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI spec emitter."

[dependencies]
au-kpis-api-http = { workspace = true }
serde_json = "1"
thiserror = "2"
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
assert_cmd = "2"
jsonschema = "0.29"
