[package]
name = "au-kpis-pdf-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client for Python PDF sidecar."

[dependencies]
au-kpis-error = { workspace = true }
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-tracing = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tracing-subscriber = "0.3"
