[package]
name = "au-kpis-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "object_store wrapper for S3/R2 (content-addressed artifacts)."

[dependencies]
au-kpis-error = { workspace = true }
bytes = "1"
futures = "0.3"
object_store = { version = "0.11", features = ["aws"] }
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
testcontainers = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
