[package]
name = "au-kpis-telemetry"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tracing + OTel setup."

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
au-kpis-config = { workspace = true }
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.27.1", features = ["trace", "rt-tokio"] }
thiserror = "2"
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
console-subscriber = { version = "0.5.0", optional = true }

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time", "io-util", "sync"] }
