[package]
name = "au-kpis-adapter-abs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ABS adapter (SDMX-JSON)."

[dependencies]
async-trait = "0.1"
au-kpis-adapter = { workspace = true }
au-kpis-domain = { workspace = true }
au-kpis-error = { workspace = true }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
au-kpis-storage = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
insta = { version = "1", features = ["json"] }
object_store = "0.11"
proptest = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
