[package]
name = "au-kpis-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "API server binary."

[dependencies]
anyhow = "1"
async-trait = "0.1"
au-kpis-api-http = { workspace = true }
au-kpis-cache = { workspace = true }
au-kpis-config = { workspace = true }
au-kpis-telemetry = { workspace = true }
axum = "0.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"

[dev-dependencies]
assert_cmd = "2"
au-kpis-testing = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
